Fixed spacing between items

--- a/public/styles.css
+++ b/public/styles.css
@@ -66,7 +66,8 @@ li {
     padding:10px 12px;
     justify-content: space-between;
     background-image: linear-gradient(to bottom, #C3EBDD ,white );
-    margin: -4px; 
+    margin: -4px;
+    margin-bottom: 40px; 
 }
 
 .name {
